# TabDiT

./: README.md  main.py  prompt.txt  pyproject.toml  research_plan.md
inference/: __init__.py  base.py  classification.py  imputation.py  regression.py  repaint_sampler.py  utils.py
model/: README.md  __init__.py  column_encoder.py  decoder.py  diffusion_transformer.py  row_encoder.py  tabular_diffusion.py
model/components/: __init__.py  feature_embedding.py  rope.py  set_transformer.py  timestep_embed.py  value_embedding.py
notes/: REPAINT_ALGORITHM_EXPLAINED.md  TAB_DDPM_WORKFLOW.md  TabICL_Data_Generation_Overview.md  TabPFN_Architecture_Overview.md  TabPFN_Unsupervised_Summary.md  tabICL_Architecture_Overview.md  value_based_position_encoding.md
prior/: README.md  __init__.py  dataset.py  genload.py  missing.py  prior_config.py  reg2cls.py
scripts/: eval_imputation.py
tasks/: __init__.py  imputation.py
tests/: __init__.py  test_diffusion.py  test_model.py  test_prior.py
train/: __init__.py  config.py  diffusion.py  run.py  trainer.py
