[project]
name = "tabular-diffusion"
version = "0.1.0"
description = "Unconditional diffusion model for tabular data generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.0",
    "numpy<2",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "scipy>=1.17.0",
    "joblib>=1.5.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
    "wandb>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
